--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  margin: 0;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  place-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  min-width: 320px;
+  min-height: 100vh;
+}
+.App{
+  display:flex;
+  
+}
+.App .btn{
+  background-color: red;
+  
+}
+.App .btn:hover{
+cursor: pointer;  
+}
+.container{
+  position: relative;
+  display: inline-block;
+
+}
+.tooltip{
+  position: absolute;
+  top:calc(-100% -50px);
+  transform: translate(-50%);
+  background-color: black;
   color: white;
+  padding: 10px;
+  border-radius: 4px;
+  z-index: 1;
+  min-width: 200px;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
